@@ -1,3 +1,10 @@
+2005-09-28  William Jon McCann  <mccann@jhu.edu>
+
+	* gui/gdmflexiserver.c (is_program_in_path, maybe_lock_screen) 
+	(run_logged_in_dialogue, main): Consolidate screensaver
+	activation code.  Don't use deprecated gnome-exec.
+	Fixes #311497.
+	
 2005-09-27  Brian Cameron <Brian.Cameron@sun.com>
 
 	* gui/greeter/greeter_item_ulist.c: Now print syslog
